infra/modules/k3s_node/manifests/02-security/200-kubearmor.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubearmor
