infra/modules/k3s_node/manifests/02-security/201-kyverno.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
